# family_expense_report

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
app/: __init__.py  constants.py  data_loaders.py  main.py  processor.py  report_generator.py  rules_engine.py
app/config/: category_mapping.yaml  exclusions.yaml  report.yaml  rules.yaml
app/data/sources/chase_card/: Chase4754_Activity20250401_20250630_20250701.CSV
app/data/sources/chase_checking/: Chase4790_Activity_20250701.CSV
app/data/sources/joe_apple_card/: Apple Card Transactions - April 2025.csv  Apple Card Transactions - June 2025.csv  Apple Card Transactions - May 2025.csv
tests/: test_data_loader.py  test_rules_engine.py
